--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -34,9 +34,6 @@ dependencies {
 android {
     compileSdkVersion 30
 
-    lintOptions {
-        disable 'InvalidPackage'
-    }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -57,6 +54,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    namespace 'com.github.cloudwebrtc.flutter_callkeep_example'
+    lint {
+        disable 'InvalidPackage'
     }
 }
 
