--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation "com.android.support:support-core-utils:28.0.0"
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-process:2.4.1'
 }
