--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -34,6 +34,11 @@ dependencies {
 android {
     compileSdkVersion 33
 
+    namespace 'com.github.cloudwebrtc.flutter_callkeep_example'
+
+    buildFeatures {
+        buildConfig = true
+    }
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
