--- a/example/android/gradle.properties
+++ b/example/android/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
-android.enableJetifier=true
 android.nonTransitiveRClass=true
+android.nonFinalResIds=false
+android.defaults.buildfeatures.buildconfig=true
